# petitc

./: .envrc  .gitignore  .rustfmt.toml  Cargo.toml  Makefile  flake.nix  run-tests  sert_var
docs/: rapport.tex
gmrs/: petitc.gr  petitc.lx
src/: ast.rs  color.rs  compile.rs  compile_annotation.rs  environment.rs  error.rs  lib.rs  main.rs  parsing.rs  tree.rs  typechecker.rs  typing.rs
tests/exec/: address1.c  and1.c  and2.c  arith1.c  array1.c  block1.c  block2.c  boolarray.c  break-continue1.c  break-continue1.out  break-continue2.c  break-continue2.out  break1.c  break2.c  call1.c  call2.c  casse.c  char1.c  char2.c  char3.c  char4.c  escape.c  escape.out  fact_imp.c  fact_rec.c  for1.c  for2.c  for3.c  for4.c  for5.c  for6.c  heapsort.c  hello_world.c  if1.c  itoa.c  itoa.out  josephus.c  keyword.c  local1.c  local2.c  (+55 more)
tests/exec-fail/: division_by_zero1.c  division_by_zero2.c  null.c
tests/syntax/bad/: testfile-assign-1.c  testfile-assign-2.c  testfile-bad_ident1-1.c  testfile-bad_ident2-1.c  testfile-block1-1.c  testfile-block2-1.c  testfile-char-1.c  testfile-char-2.c  testfile-comment-1.c  testfile-expr1-1.c  testfile-expr10-1.c  testfile-expr11-1.c  testfile-expr2-1.c  testfile-expr3-1.c  testfile-expr4-1.c  testfile-expr6-1.c  testfile-expr7-1.c  testfile-expr8-1.c  testfile-expr9-1.c  testfile-for-1.c  testfile-for-2.c  testfile-for-3.c  testfile-for-4.c  testfile-for-5.c  testfile-for-6.c  testfile-for-7.c  testfile-for-8.c  testfile-if-1.c  testfile-if-2.c  testfile-if-3.c  testfile-if-4.c  testfile-instr_decl-1.c  testfile-instr_expr-1.c  (+11 more)
(+95 files in other folders)
