[package]
name = "petitc"
version = "0.1.0"
edition = "2021"
authors = [ "Adrien Mathieu <adrien.lc.mathieu@gmail.com>",
            "Jean Caspar <jean.caspar67610@gmail.com" ]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
beans = "4.0"
thiserror = "1.0.37"
